--- a/self-improving-SLAM.html
+++ b/self-improving-SLAM.html
@@ -82,7 +82,7 @@ feature-based monocular SLAM system (i.e., ORB-SLAM). Extensive experiments on K
 <h4>Citation</h4>
 <p>Lokender Tiwari, Pan Ji, Quoc-Huy Tran, Bingbing Zhuang, Saket Anand and Manmohan Chandraker, "Pseudo RGB-D for Self-Improving Monocular SLAM and Depth Prediction", In Proceedings of European Conference on Computer Vision, 2020.</p>
 <h4>Bibtex</h4>
-<pre>@inproceedings{zou2018dfnet,
+<pre>@inproceedings{tiwari2020pseudo,
     author={Tiwari, Lokender and Ji, Pan and Tran, Quoc-Huy and Zhuang, Bingbing and Anand, Saket 
  	and Chandraker, Manmohan},
     title     = {Pseudo RGB-D for Self-Improving Monocular SLAM and Depth Prediction}, 
