--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   </style>
   <link rel="icon" type="image/png" href="page_iconnew.png">
-  <title>Dr. Lokender Tiwari</title>
+  <title>Lokender Tiwari</title>
   <meta name="Lokender Tiwari's Homepage"http-equiv="Content-Type" content="Lokender Tiwari's Homepage">
 
   <link href='https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
@@ -70,7 +70,7 @@
 <a href="mailto:tiwarilokender@gmail.com">Email</a> | <a href="https://scholar.google.com/citations?user=uHfnun4AAAAJ&hl=en">Google Scholar</a> | <a href="http://www.linkedin.com/in/lokender/"> LinkedIn </a> | <a href="https://github.com/lokender">Github</a>
 </p>
             </td>
-            <td width="33%"valign="top"><img src="files/p1.png" width="100%"></td>
+            <td width="33%"valign="top"><img src="./files/p1.png" width="100%"></td>
           </tr>
         </table>
 
