--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
 		</table>
     <table width="100%" align="center" border="0" cellpadding="20">
       <tr>
-        <h3 align="center">Our proposed Pseudo RGB-D SLAM vs RGB SLAM</h3>
+        <h3 align="center">[ECCV 2020] Our proposed Pseudo RGB-D SLAM vs RGB SLAM</h3>
         <td width="48%" align="center"><iframe width="80%" height=315 src="https://www.youtube.com/embed/gdY4yn0J4E0" frameborder="0" allowfullscreen></iframe>
       </tr>
      </table>   
