--- a/index.html
+++ b/index.html
@@ -82,8 +82,9 @@
 			<li>[<b>June/2020</b>] <i>REGroup</i>. A test time replacement of Softmax for robust predictions, <a href="https://lokender.github.io/REGroup.html" target="_blank">Project Page</a></li>
 			<li>[<b>June/2020</b>] I will be a volunteer for <a href="https://icml.cc/" target="_blank">ICML 2020</a></li>
 			<li>[<b>Apr/2020</b>] I will be a volunteer for <a href="https://iclr.cc/" target="_blank">ICLR 2020</a></li>
-			<li>[<b>Feb/2019</b>] I will be spending summer 2019 at Media Analytics Department of <a href="http://www.nec-labs.com/research-departments/media-analytics/media-analytics-home" target="_blank">NEC Laboratories America, Inc.</a></li>
-			</ul>
+<!-- 			<li>[<b>Feb/2019</b>] I will be spending summer 2019 at Media Analytics Department of <a href="http://www.nec-labs.com/research-departments/media-analytics/media-analytics-home" target="_blank">NEC Laboratories America, Inc.</a></li>
+			 -->
+		</ul>
 		</td></tr>
 
         </table>
