--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
 
   </style>
-  <link rel="icon" type="image/png" href="page_iconnew.png">
-  <title>Lokender Tiwari</title>
+  <link rel="icon" type="image/png" href="./page_iconnew.png">
+  <title>Lokender Tiwari's Homepage</title>
   <meta name="Lokender Tiwari's Homepage"http-equiv="Content-Type" content="Lokender Tiwari's Homepage">
 
   <link href='https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
