--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </style>
   <link rel="icon" type="image/png" href="./page_iconnew.png">
   <title>Lokender Tiwari's Homepage</title>
-  <meta name="Lokender Tiwari's Homepage"http-equiv="Content-Type" content="Lokender Tiwari's Homepage">
+  <meta name="Dr. Lokender Tiwari's Homepage"http-equiv="Content-Type" content="Dr. Lokender Tiwari's Homepage">
 
   <link href='https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -56,7 +56,7 @@
     <tr>
       <td>
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
-          <p align="center"><font size="6">Lokender Tiwari</font><br>
+          <p align="center"><font size="6">Dr. Lokender Tiwari</font><br>
           <tr>
             <td width="67%" valign="middle" align="justify">
 
