--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 			<ul>
 			<li>[<b>March/2021</b>] Sucessfully defended my Ph.D. thesis <a href="https://repository.iiitd.edu.in/jspui/handle/123456789/875" target="_blank">Robust Scene Understanding</a>.
 				<ul>
-			<li>		<i>Thesis committe:</i> <a href="https://faculty.iiit.ac.in/~jawahar/" target="_blank">Prof. C. V. Jawahar</a>, <a href="http://www.ee.iisc.ac.in/people/faculty/venu/index.html" target="_blank">Prof. V. M. Govindu</a>, and <a href="https://grvsharma.com/" target="_blank">Dr. Gaurav Sharma</a>  </li>
+			<li>		<i>Thesis Examiners:</i> <a href="https://faculty.iiit.ac.in/~jawahar/" target="_blank">Prof. C. V. Jawahar</a>, <a href="http://www.ee.iisc.ac.in/people/faculty/venu/index.html" target="_blank">Prof. V. M. Govindu</a>, and <a href="https://grvsharma.com/" target="_blank">Dr. Gaurav Sharma</a>  </li>
 					</li>
 				</ul>
 				<li>[<b>July/2020</b>] Our work on self-improving SLAM and Depth Predictions accepted to <a href="https://eccv2020.eu/" target="_blank">ECCV 2020</a> </li>
