--- a/index.html
+++ b/index.html
@@ -79,7 +79,11 @@
             <h2>News</h2>
 			<ul>
 			<li>[<b>March/2021</b>] Sucessfully defended my Ph.D. thesis on <a href="https://repository.iiitd.edu.in/jspui/handle/123456789/875" target="_blank">Robust Scene Understanding</a>.
-				<li>[<b>July/2020</b>] Our work on self-improving SLAM and Depth Predictions accepted to <a href="https://eccv2020.eu/" target="_blank">ECCV 2020</a> </li>
+							<ul>
+			<li>		<i>Thesis Examiners:</i> <a href="https://faculty.iiit.ac.in/~jawahar/" target="_blank">Prof. C. V. Jawahar (IIIT-H) </a>, <a href="http://www.ee.iisc.ac.in/people/faculty/venu/index.html" target="_blank">Prof. V. M. Govindu (IISc)</a>, and <a href="https://grvsharma.com/" target="_blank">Dr. Gaurav Sharma (IIT-K)</a>  </li>
+					</li>
+				</ul>
+			<li>[<b>July/2020</b>] Our work on self-improving SLAM and Depth Predictions accepted to <a href="https://eccv2020.eu/" target="_blank">ECCV 2020</a> </li>
 			<li>[<b>June/2020</b>] <i>REGroup</i>. A test time replacement of Softmax for robust predictions, <a href="https://lokender.github.io/REGroup.html" target="_blank">Project Page</a></li>
 			<li>[<b>June/2020</b>] I will be a volunteer for <a href="https://icml.cc/" target="_blank">ICML 2020</a></li>
 			<li>[<b>Apr/2020</b>] I will be a volunteer for <a href="https://iclr.cc/" target="_blank">ICLR 2020</a></li>
