--- a/index.html
+++ b/index.html
@@ -128,6 +128,30 @@
 
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
           <tr>
+            <td width="33%" valign="top"><a href="./papers_imgs/deepfraper.gif"><img src="./papers_imgs/deepfraper.gif" width="100%" style="border-style: none"></a>
+            <td width="67%" valign="top">
+              <p><a href="" id="deepdraper">
+              <img src="./new.png" alt="[NEW]" width="6%" style="border-style: none">
+              <heading>DeepDraper: Fast and Accurate 3D Garment Draping over a 3D Human Body</heading></a><br>
+              <strong>Lokender Tiwari</strong>, Brojeshwar Bhowmick, <br>
+	      <a href="http://montrealrobotics.ca/diff3d/" <em>Workshop on Differentiable 3D Vision and Graphics</em></a> <br>
+              <a href="http://iccv2021.thecvf.com/" <em>International Conference on Computer Vision (<b>ICCV</b>)</em> </a>, 2021
+              <br></p>
+
+        <!--      <div class="paper" id="prgbd">
+                <a href="https://lokender.github.io/self-improving-SLAM.html">project</a> / 
+                <a href="http://tiny.cc/pRGBDKITTI19" target="_blank">Demo 1 </a> / 
+                <a href="http://tiny.cc/pRGBDKITTI11" target="_blank">Demo 2 </a> /
+				<a href="http://tiny.cc/pRGBDTUMLCV" target="_blank">Demo 3</a>
+                </div>
+-->
+            </td>
+
+        </tr>
+		
+		
+		
+		<tr>
             <td width="33%" valign="top"><a href="./papers_imgs/prgbd_teaser.gif"><img src="./papers_imgs/prgbd_teaser.gif" width="100%" style="border-style: none"></a>
             <td width="67%" valign="top">
               <p><a href="https://arxiv.org/abs/2004.10681" id="prgbd">
