--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <tr><td>
             <h2>News</h2>
 			<ul>
-			<li>[<b>Aug/2021</b>] Our work on 3D Virtual Try-on (DeepDraper) accepted in <a href="http://montrealrobotics.ca/diff3d/"> Workshop on Differentiable 3D Vision and Graphics</a> at <a href="http://iccv2021.thecvf.com/"> ICCV, 2021 </a> </li>
+			<li>[<b>Aug/2021</b>] Our work on 3D Virtual Try-on (DeepDraper) accepted in the <a href="http://iccv2021.thecvf.com/"> ICCV, 2021 </a> <a href="http://montrealrobotics.ca/diff3d/"> Workshop</a> </li>
 			<li>[<b>March/2021</b>] Sucessfully defended my Ph.D. thesis on <a href="https://repository.iiitd.edu.in/jspui/handle/123456789/875" target="_blank">Robust Scene Understanding</a>.
 							<ul>
 			<li>		<i>Thesis Examiners:</i> <a href="https://faculty.iiit.ac.in/~jawahar/" target="_blank">Prof. C. V. Jawahar (IIIT-H) </a>, <a href="http://www.ee.iisc.ac.in/people/faculty/venu/index.html" target="_blank">Prof. V. M. Govindu (IISc)</a>, and <a href="https://grvsharma.com/" target="_blank">Dr. Gaurav Sharma (IIT-K)</a>  </li>
