--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
           <tr>
-            <td width="33%" valign="top"><a href="./papers_imgs/deepfraper.gif"><img src="./papers_imgs/deepfraper.gif" width="100%" style="border-style: none"></a>
+            <td width="33%" valign="top"><a href="./papers_imgs/deepfraper.gif"><img src="./papers_imgs/deepdraper.gif" width="100%" style="border-style: none"></a>
             <td width="67%" valign="top">
               <p><a href="" id="deepdraper">
               <img src="./new.png" alt="[NEW]" width="6%" style="border-style: none">
@@ -139,13 +139,11 @@
               <a href="http://iccv2021.thecvf.com/" <em>International Conference on Computer Vision (<b>ICCV</b>)</em> </a>, 2021
               <br></p>
 
-        <!--      <div class="paper" id="prgbd">
-                <a href="https://lokender.github.io/self-improving-SLAM.html">project</a> / 
-                <a href="http://tiny.cc/pRGBDKITTI19" target="_blank">Demo 1 </a> / 
-                <a href="http://tiny.cc/pRGBDKITTI11" target="_blank">Demo 2 </a> /
-				<a href="http://tiny.cc/pRGBDTUMLCV" target="_blank">Demo 3</a>
+              <div class="paper" id="prgbd">
+                <a href="">project (Coming Soon)</a> / 
+                <a href="" target="_blank">PDF (Coming Soon) </a>
                 </div>
--->
+
             </td>
 
         </tr>
