--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
           <tr>
-            <td width="33%" valign="top"><a href="./papers_imgs/deepfraper.gif"><img src="./papers_imgs/deepdraper.gif" width="100%" style="border-style: none"></a>
+            <td width="33%" valign="top"><a href="./papers_imgs/deepdraper.gif"><img src="./papers_imgs/deepdraper.gif" width="100%" style="border-style: none"></a>
             <td width="67%" valign="top">
               <p><a href="" id="deepdraper">
               <img src="./new.png" alt="[NEW]" width="6%" style="border-style: none">
