--- a/index.html
+++ b/index.html
@@ -350,6 +350,7 @@
 <li>IEEE Transactions on Industrial Electronics</li>
 <li>Elsevier Pattern Recognition</li>
 <li>IEEE Access</li>
+<li>IEEE Sensors</li>
 <li>IEEE Winter Conference on Computer Vision (WACV)</li>
 <li>IEEE International Conference on Multimedia & Expo (ICME)</li>
 </ul>
