--- a/REGroup.html
+++ b/REGroup.html
@@ -58,9 +58,9 @@
 Deep Neural Networks (DNNs) are often criticized for being susceptible to adversarial attacks. Most successful defense strategies adopt adversarial training or random input transformations that typically require retraining or fine-tuning the model to achieve reasonable performance. In this work, our investigations of intermediate representations of a \emph{pre-trained} DNN lead to an interesting discovery pointing to intrinsic robustness to adversarial attacks. We find that we can learn a \emph{generative} classifier by statistically characterizing the neural response of an intermediate layer to clean training samples. The predictions of multiple such intermediate-layer based classifiers, when aggregated, show unexpected robustness to adversarial attacks. Specifically, we devise an ensemble of these generative classifiers that rank-aggregates their predictions via a \emph{Borda count}-based consensus. Our proposed approach uses a subset of the clean training data and a pre-trained model, and yet is agnostic to network architectures or the adversarial attack generation method. We show extensive experiments to establish that our defense strategy achieves state-of-the-art performance on the ImageNet validation set.
 </p>
 
-<h2 style="text-align:center">PAPER</h2>
+<h2 style="text-align:center">Paper PDF Coming Soon</h2>
 <div style="text-align:center"> 
-<a href="https://arxiv.org/abs/2006.10679" target="_blank">
+<a href="" target="_blank">
 <img class="responsive-img" src="./papers_imgs/regroup_paper_fig.png" width="100" >
 </a>
 <h4>arXiv 2020</h4>
