--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
         <tr><td>
             <h2>News</h2>
 			<ul>
+			<li>[<b>Oct/2021</b>] One paper accepted to <a href="https://wacv2022.thecvf.com/home"> IEEE WACV, 2022</a> </li>
 			<li>[<b>Aug/2021</b>] 3D Virtual Garment Try-on (DeepDraper) accepted in the <a href="http://iccv2021.thecvf.com/"> ICCV, 2021 </a> <a href="http://montrealrobotics.ca/diff3d/"> Workshop</a> </li>
 			<li>[<b>March/2021</b>] Sucessfully defended my Ph.D. thesis on <a href="https://repository.iiitd.edu.in/jspui/handle/123456789/875" target="_blank">Robust Scene Understanding</a>.
 							<ul>
@@ -129,6 +130,25 @@
 
 
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+	<tr>
+            <td width="33%" valign="top"><a href="./papers_imgs/REGroup.png"><img src="./papers_imgs/REGroup.png" width="100%" style="border-style: none"></a>
+            <td width="67%" valign="top">
+              <p><a href="" id="regroup_wacv">
+              <img src="./new.png" alt="[NEW]" width="6%" style="border-style: none">
+              <heading>REGroup: Rank-aggregating Ensemble of Generative Classifiers for Robust Predictions</a><br>
+              <strong>Lokender Tiwari</strong>, Anish Madan, Saket Anand, Subhasis Banerjee, <br>
+              <a href="hhttps://wacv2022.thecvf.com/home" <em>IEEE Winter Conference on Computer Vision (<b>WACV</b>)</em>, 2022
+              <br></p>
+
+              <div class="paper" id="prgbd">
+                <a href="https://lokender.github.io/REGroup.html">project</a> / 
+                <a href="https://github.com/lokender/REGroup" target="_blank">code</a> 
+                </div>
+
+            </td>
+
+        </tr>
+
           <tr>
             <td width="33%" valign="top"><a href="./papers_imgs/deepdraper.gif"><img src="./papers_imgs/deepdraper.gif" width="100%" style="border-style: none"></a>
             <td width="67%" valign="top">
@@ -223,7 +243,7 @@
 
         </tr>
         </table>
-		<table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+<!-- 		<table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
         <tr><td>
             <h2>Technical Reports / arXiv preprints</h2>
 		</td></tr>
@@ -248,7 +268,7 @@
 
         </tr>
 
-        </table>
+        </table> -->
 
 
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
