--- a/index.html
+++ b/index.html
@@ -175,7 +175,6 @@
             <td width="33%" valign="top"><a href="./papers_imgs/prgbd_teaser.gif"><img src="./papers_imgs/prgbd_teaser.gif" width="100%" style="border-style: none"></a>
             <td width="67%" valign="top">
               <p><a href="https://arxiv.org/abs/2004.10681" id="prgbd">
-              <img src="./new.png" alt="[NEW]" width="6%" style="border-style: none">
               <heading>Pseudo RGB-D for Self-Improving Monocular SLAM and Depth Prediction</heading></a><br>
               <strong>Lokender Tiwari</strong>, Pan Ji, Quoc-Huy Tran, Bingbing Zhuang, Saket Anand, Manmohan Chandraker, <br>
               <em>European Conference on Computer Vision (<b>ECCV</b>)</em>, 2020
@@ -247,14 +246,13 @@
         <tr><td>
             <h2>Technical Reports / arXiv preprints</h2>
 		</td></tr>
-        </table>
+        </table> -->
 
-        <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+<!--         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
           <tr>
             <td width="33%" valign="top"><a href="./papers_imgs/REGroup.png"><img src="./papers_imgs/REGroup.png" width="100%" style="border-style: none"></a>
             <td width="67%" valign="top">
               <p><a href="https://arxiv.org/abs/2006.10679" id="regroup">
-             <!--  <img src="./new.png" alt="[NEW]" width="6%" style="border-style: none"> -->
               <heading>Dissecting Deep Networks into an Ensemble of Generative Classifiers for Robust Predictions</heading></a><br>
               <strong>Lokender Tiwari</strong>, Anish Madan, Saket Anand, Subhasis Banerjee, <br>
               <em>arXiv</em>, 2020
@@ -268,7 +266,7 @@
 
         </tr>
 
-        </table> -->
+        </table>  -->
 
 
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
