--- a/index.html
+++ b/index.html
@@ -138,7 +138,10 @@
               <heading>REGroup: Rank-aggregating Ensemble of Generative Classifiers for Robust Predictions</a><br>
               <strong>Lokender Tiwari</strong>, Anish Madan, Saket Anand, Subhasis Banerjee, <br>
               <a href="hhttps://wacv2022.thecvf.com/home" <em>IEEE Winter Conference on Computer Vision (<b>WACV</b>)</em>, 2022
-              <br></p>
+              <br>
+		<a href="hhttps://wacv2022.thecvf.com/home" <em>(to appear)</em>
+              <br>      
+		    </p>
 
               <div class="paper" id="prgbd">
                 <a href="https://lokender.github.io/REGroup.html">project</a> / 
@@ -158,7 +161,10 @@
               <strong>Lokender Tiwari</strong>, Brojeshwar Bhowmick, <br>
 	      <a href="http://montrealrobotics.ca/diff3d/" <em>Workshop on Differentiable 3D Vision and Graphics</em></a> <br>
               <a href="http://iccv2021.thecvf.com/" <em>International Conference on Computer Vision (<b>ICCV</b>)</em> </a>, 2021
-              <br></p>
+              <br>
+		<a href="http://iccv2021.thecvf.com/" <em>(to appear)</em>
+              <br>
+</p>
 
               <div class="paper" id="prgbd">
                 <a href="">project (Coming Soon)</a> / 
