--- a/index.html
+++ b/index.html
@@ -167,8 +167,9 @@
 </p>
 
               <div class="paper" id="prgbd">
-                <a href="">project (Coming Soon)</a> / 
-                <a href="" target="_blank">PDF (Coming Soon) </a>
+                <a href="https://openaccess.thecvf.com/content/ICCV2021W/Diff3D/papers/Tiwari_DeepDraper_Fast_and_Accurate_3D_Garment_Draping_Over_a_3D_ICCVW_2021_paper.pdf">Paper</a> / 
+                <a href="./fles/deepdraper_supp.pdf" target="_blank">Supp</a>
+		<a href="https://www.youtube.com/watch?v=gVHGijXWsMc" target="_blank">Demo</a>
                 </div>
 
             </td>
@@ -407,14 +408,19 @@
 
     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
 		<tr><td>
-		<h2>Tech Demos</h2>
+		<h2>Technical Demos</h2>
 		</td></tr>
 		</table>
     <table width="100%" align="center" border="0" cellpadding="20">
-      <tr>
+      	<tr>
+        <h3 align="center">[ICCVW 2021] DeepDraper : Fast and Accurate 3D Garment Draping over a 3D Human Body</h3>
+        <td width="48%" align="center"><iframe width="80%" height=315 src="https://www.youtube.com/embed/gdY4yn0J4E0" frameborder="0" allowfullscreen></iframe>
+      </tr>
+	<tr>
         <h3 align="center">[ECCV 2020] Our proposed Pseudo RGB-D SLAM vs RGB SLAM</h3>
         <td width="48%" align="center"><iframe width="80%" height=315 src="https://www.youtube.com/embed/gdY4yn0J4E0" frameborder="0" allowfullscreen></iframe>
       </tr>
+
      </table>   
 
 
