--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
           <tr>
             <td width="33%" valign="top"><a href="./papers_imgs/deepdraper.gif"><img src="./papers_imgs/deepdraper.gif" width="100%" style="border-style: none"></a>
             <td width="67%" valign="top">
-              <p><a href="" id="deepdraper">
+              <p><a href="https://openaccess.thecvf.com/content/ICCV2021W/Diff3D/papers/Tiwari_DeepDraper_Fast_and_Accurate_3D_Garment_Draping_Over_a_3D_ICCVW_2021_paper.pdf" id="deepdraper">
               <img src="./new.png" alt="[NEW]" width="6%" style="border-style: none">
               <heading>DeepDraper: Fast and Accurate 3D Garment Draping over a 3D Human Body</heading></a><br>
               <strong>Lokender Tiwari</strong>, Brojeshwar Bhowmick, <br>
@@ -168,7 +168,7 @@
 
               <div class="paper" id="prgbd">
                 <a href="https://openaccess.thecvf.com/content/ICCV2021W/Diff3D/papers/Tiwari_DeepDraper_Fast_and_Accurate_3D_Garment_Draping_Over_a_3D_ICCVW_2021_paper.pdf">Paper</a> / 
-                <a href="./fles/deepdraper_supp.pdf" target="_blank">Supp</a>
+                <a href="./files/deepdraper_supp.pdf" target="_blank">Supp</a> /
 		<a href="https://www.youtube.com/watch?v=gVHGijXWsMc" target="_blank">Demo</a>
                 </div>
 
