--- a/index.html
+++ b/index.html
@@ -415,13 +415,17 @@
       	<tr>
         <h3 align="center">[ICCVW 2021] DeepDraper : Fast and Accurate 3D Garment Draping over a 3D Human Body</h3>
         <td width="48%" align="center"><iframe width="80%" height=315 src="https://www.youtube.com/watch?v=gVHGijXWsMc" frameborder="0" allowfullscreen></iframe>
-      </tr> <\br>
-	<tr>
-        <h3 align="center">[ECCV 2020] Our proposed Pseudo RGB-D SLAM vs RGB SLAM</h3>
-        <td width="48%" align="center"><iframe width="80%" height=315 src="https://www.youtube.com/embed/gdY4yn0J4E0" frameborder="0" allowfullscreen></iframe>
-      </tr>
-
+      </tr> 
      </table>   
+
+    <table width="100%" align="center" border="0" cellpadding="20">
+      	<tr>
+        <h3 align="center">[ICCVW 2021] DeepDraper : Fast and Accurate 3D Garment Draping over a 3D Human Body</h3>
+        <td width="48%" align="center"><iframe width="80%" height=315 src="https://www.youtube.com/watch?v=gVHGijXWsMc" frameborder="0" allowfullscreen></iframe>
+      </tr> 
+      </tr>
+    </table>   
+
 
 
 
