--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
               <div class="paper" id="prgbd">
                 <a href="https://openaccess.thecvf.com/content/ICCV2021W/Diff3D/papers/Tiwari_DeepDraper_Fast_and_Accurate_3D_Garment_Draping_Over_a_3D_ICCVW_2021_paper.pdf">Paper</a> / 
                 <a href="./files/deepdraper_supp.pdf" target="_blank">Supp</a> /
-		<a href="https://www.youtube.com/watch?v=gVHGijXWsMc" target="_blank">Demo</a>
+		<a href="https://www.youtube.com/watch?v=nkABDI1R320" target="_blank">Demo</a>
                 </div>
 
             </td>
@@ -414,7 +414,7 @@
     <table width="100%" align="center" border="0" cellpadding="20">
       	<tr>
         <h3 align="center">[ICCVW 2021] DeepDraper : Fast and Accurate 3D Garment Draping over a 3D Human Body</h3>
-        <td width="48%" align="center"><iframe width="80%" height=315 src="https://www.youtube.com/watch?v=gVHGijXWsMc" frameborder="0" allowfullscreen></iframe>
+        <td width="48%" align="center"><iframe width="80%" height=315 src="https://www.youtube.com/watch?v=nkABDI1R320" frameborder="0" allowfullscreen></iframe>
       </tr> 
      </table>   
 
