--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
     <table width="100%" align="center" border="0" cellpadding="20">
       	<tr>
         <h3 align="center">[ICCVW 2021] DeepDraper : Fast and Accurate 3D Garment Draping over a 3D Human Body</h3>
-        <td width="48%" align="center"><iframe width="80%" height=315 src="https://www.youtube.com/watch?v=nkABDI1R320" frameborder="0" allowfullscreen></iframe>
+        <td width="48%" align="center"><iframe width="80%" height=315 src="https://www.youtube.com/embed/nkABDI1R320" frameborder="0" allowfullscreen></iframe>
       </tr> 
      </table>   
 
