--- a/deepdraper.html
+++ b/deepdraper.html
@@ -26,15 +26,15 @@
 <div id="container"> 
 <div class="container"> 
 
-<h1 style="text-align:center">DeepDrape: Fast and Accurate 3D Garment Draping Over a 3D Human Body </h1> <br>
+<h1 style="text-align:center">DeepDraper: Fast and Accurate 3D Garment Draping Over a 3D Human Body </h1> <br>
 <h4 style="text-align:center"><a href="https://lokender.github.io/">Lokender Tiwari</a>&nbsp&nbsp&nbsp&nbsp<a href="https://sites.google.com/view/brojeshwar/home">Brojeshwar Bhowmick</a>  </h4> 
 <h4 style="text-align:center"><a href="https://www.tcs.com/tcs-research">TCS Research</a> </h4>
-<h4 style="text-align:center"><div>Differentiable 3D Vision and Graphics Wrokshop</div> </h4>
+<h4 style="text-align:center"><div>Differentiable 3D Vision and Graphics Workshop</div> </h4>
 <h4 style="text-align:center"><div>In IEEE/CVF International Conference on Computer Vision (ICCV), 2021</div> </h4>
 
 
 
-<h2 style="text-align:center">DEMOS</h2>
+<!-- <h2 style="text-align:center">DEMOS</h2> -->
 <!--   Icon Section   -->
 <div class="row center">
 <div class="col l8 offset-l2 m3 offset-m1 s12">
@@ -70,20 +70,21 @@ Draping a 3D human mesh has garnered broad interest due to its wide applicabilit
 <h2 style="text-align:center">PAPER</h2>
 <div style="text-align:center"> 
 <a href="https://openaccess.thecvf.com/content/ICCV2021W/Diff3D/papers/Tiwari_DeepDraper_Fast_and_Accurate_3D_Garment_Draping_Over_a_3D_ICCVW_2021_paper.pdf" target="_blank">
-<img class="responsive-img" src="./papers_imgs/deepdraper.gif" width="100" >
+<img class="responsive-img" src="./papers_imgs/deepdraper.gif" width="200" >
 </a>
-<h4>ECCV 2020</h4>
+<h4>ICCV, Workshops 2021</h4>
 </div>
 <div style="text-align:justify"> 
 <h4>Citation</h4>
-<p>Lokender Tiwari, Pan Ji, Quoc-Huy Tran, Bingbing Zhuang, Saket Anand and Manmohan Chandraker, "Pseudo RGB-D for Self-Improving Monocular SLAM and Depth Prediction", In Proceedings of European Conference on Computer Vision, 2020.</p>
+<p>Lokender Tiwari, and Brojeshwar Bhowmick, "DeepDraper: Fast and Accurate 3D Garment Draping Over a 3D Human Body", In Proceedings of IEEE/CVF International Conference on Computer Vision (ICCV) Workshops,2021.</p>
 <h4>Bibtex</h4>
-<pre>@inproceedings{tiwari2020pseudo,
-    author={Tiwari, Lokender and Ji, Pan and Tran, Quoc-Huy and Zhuang, Bingbing and Anand, Saket 
- 	and Chandraker, Manmohan},
-    title     = {Pseudo RGB-D for Self-Improving Monocular SLAM and Depth Prediction}, 
-    booktitle = {European Conference on Computer Vision},
-    year      = {2020}
+<pre>@InProceedings{Tiwari_2021_ICCV,
+    author    = {Tiwari, Lokender and Bhowmick, Brojeshwar},
+    title     = {DeepDraper: Fast and Accurate 3D Garment Draping Over a 3D Human Body},
+    booktitle = {Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV) Workshops},
+    month     = {October},
+    year      = {2021},
+    pages     = {1416-1426}
 }
 </pre>
 </div>
@@ -96,7 +97,7 @@ Draping a 3D human mesh has garnered broad interest due to its wide applicabilit
 &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 
-<a href="" target="_blank">
+<!-- <a href="" target="_blank">
 <img class="responsive-img" src="./papers_imgs/icon_zip.png" width="100" >
 </a>
 <h4>Code (coming soon)  &nbsp&nbsp&nbsp&nbsp&nbsp  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  Trained Models/Results </h4>
@@ -122,7 +123,7 @@ MonoDepth2-M: MonoDepth2 trained using monocular images.</p>
 <div style="text-align:center"> 
 <img class="responsive-img" src="./papers_imgs/qual_pose_kitti.png" width="600" >
 <p>Qualitative pose evaluation results on KITTI Odometry sequences.</p>
-</div>
+</div> -->
 
  <div id="footer">
 <div id="footer-text">
