--- a/deepdraper.html
+++ b/deepdraper.html
@@ -67,7 +67,7 @@
 <p style="text-align:justify">
 Draping a 3D human mesh has garnered broad interest due to its wide applicability in virtual try-on, animations, etc. The 3D garment deformations produced by the existing methods are often inconsistent with the body shape, pose, and measurements. This paper proposes a single unified learning-based framework (DeepDraper) to predict garment deformation as a function of body shape, pose, measurements, and garment styles. We train the DeepDraper with coupled geometric and multi-view perceptual losses. Unlike existing methods, we additionally model garment deformations as a function of standard body measurements, which generally a buyer or a designer uses to buy or design perfect fit clothes. As a result,  DeepDraper significantly outperforms the state-of-the-art deep network-based approaches in terms of fitness and realism and generalizes well to the unseen style of the garments. In addition to that, DeepDraper is ~10 times smaller in size and ~23 times faster than the closest state-of-the-art method (TailorNet), which favors its use in real-time applications with less computational power. Despite being trained on the static poses of the TailorNet dataset, DeepDraper generalizes well to unseen body shapes, poses, and garment styles and produces temporally coherent garment deformations on the pose sequences even from the unseen AMASS dataset. </p>
 
-<h2 style="text-align:center">PAPER</h2>
+<h2 style="text-align:center">PAPER (click on the fig below)</h2>
 <div style="text-align:center"> 
 <a href="https://openaccess.thecvf.com/content/ICCV2021W/Diff3D/papers/Tiwari_DeepDraper_Fast_and_Accurate_3D_Garment_Draping_Over_a_3D_ICCVW_2021_paper.pdf" target="_blank">
 <img class="responsive-img" src="./papers_imgs/deepdraper.gif" width="200" >
@@ -97,13 +97,13 @@ Draping a 3D human mesh has garnered broad interest due to its wide applicabilit
 &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 
-<!-- <a href="" target="_blank">
+<a href="" target="_blank">
 <img class="responsive-img" src="./papers_imgs/icon_zip.png" width="100" >
 </a>
 <h4>Code (coming soon)  &nbsp&nbsp&nbsp&nbsp&nbsp  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  Trained Models/Results </h4>
 </div>
 
-<h2 style="text-align:center">A SELF-SUPERVISED, SELF-IMPROVING FRAMEWORK</h2>
+<!-- <h2 style="text-align:center">A SELF-SUPERVISED, SELF-IMPROVING FRAMEWORK</h2>
 <div style="text-align:center"> 
 <img class="responsive-img" src="./papers_imgs/self_improving_framework.png" width="600" >
 <p>It alternates between pose refinement (blue arrows) and depth refinement (red arrows).</p>
