--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <strong>Research :</strong> I am interested in developing robust solutions for scene understanding (e.g SfM/SLAM, image-based 3D modeling, classification, detection). From the computer graphic'ss side, I am interested in motion capture, animation, and telepresence. <i>Applications</i>: Autonomous Driving, Robotics, AR/VR, Gaming, Robust Classification and Detection Systems (Image, Text and Audio).
 
 <p align=center>
-<a href="mailto:tiwarilokender@gmail.com">Email</a> | <a href="https://scholar.google.com/citations?user=uHfnun4AAAAJ&hl=en">Google Scholar</a> | <a href="http://www.linkedin.com/in/lokender/"> LinkedIn </a> | <a href="https://github.com/lokender">Github</a>
+<a href="mailto:tiwarilokender@gmail.com">Email</a> | <a href="https://scholar.google.com/citations?user=uHfnun4AAAAJ&hl=en">Google Scholar</a> | <a href="http://www.linkedin.com/in/lokender/"> LinkedIn </a> | <a href="https://github.com/lokender">Github</a> | <a href="https://twitter.com/LokenderTiwari">Twitter</a>
 </p>
             </td>
             
