--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		    I am the recipient of <a href="https://lokender.github.io/gold.html" target="_blank">Chancellor's Gold Medal</a> for academic excellence in B.Tech (Computer Science and Engineering) 2008-2012.
 <br>
 <br>		    
-<strong>Research :</strong> I am interested in developing robust solutions for scene understanding (e.g SfM/SLAM, image-based 3D modeling, classification, detection). From the computer graphic'ss side, I am interested in motion capture, animation, and telepresence. <i>Applications</i>: Autonomous Driving, Robotics, AR/VR, Gaming, Robust Classification and Detection Systems (Image, Text and Audio).
+<strong>Research :</strong> I am interested in developing robust solutions for scene understanding (e.g SfM/SLAM, image-based 3D modeling, classification, detection). From the computer graphic's side, I am interested in motion capture, animation, and telepresence. <i>Applications</i>: Autonomous Driving, Robotics, AR/VR, Gaming, Robust Classification and Detection Systems (Image, Text and Audio).
 
 <p align=center>
 <a href="mailto:tiwarilokender@gmail.com">Email</a> | <a href="https://scholar.google.com/citations?user=uHfnun4AAAAJ&hl=en">Google Scholar</a> | <a href="http://www.linkedin.com/in/lokender/"> LinkedIn </a> | <a href="https://github.com/lokender">Github</a> | <a href="https://twitter.com/LokenderTiwari">Twitter</a>
@@ -139,7 +139,7 @@
               <img src="./new.png" alt="[NEW]" width="6%" style="border-style: none">
               <heading>REGroup: Rank-aggregating Ensemble of Generative Classifiers for Robust Predictions</a><br>
               <strong>Lokender Tiwari</strong>, Anish Madan, Saket Anand, Subhasis Banerjee, <br>
-              <a href="hhttps://wacv2022.thecvf.com/home" <em>IEEE Winter Conference on Computer Vision (<b>WACV</b>)</em>, 2022
+              <a href="hhttps://wacv2022.thecvf.com/home" <em>IEEE Winter Conference on Applications of Computer Vision (<b>WACV</b>)</em>, 2022
               <br>
 		<a href="hhttps://wacv2022.thecvf.com/home" <em>(to appear)</em>
               <br>      
@@ -206,7 +206,7 @@
               <!-- <img src="./new.png" alt="[NEW]" width="6%" style="border-style: none"> -->
               <heading>DGSAC: Density Guided Sampling and Consensus</heading></a><br>
               <strong>Lokender Tiwari</strong>, Saket Anand <br>
-              <em>IEEE Winter Conference on Computer Vision (<b>WACV</b>)</em>, 2018
+              <em>IEEE Winter Conference on Applications of Computer Vision (<b>WACV</b>)</em>, 2018
               <br></p>
 
               <div class="paper" id="dgsac_wacv">
