--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <tr>
       <td>
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
-          <p align="center"><font size="6">Lokender Tiwari</font><br>
+          <p align="center"><font size="6">Lokender Tiwari, Ph.D.</font><br>
           <tr>
 		<td width="33%"valign="top"><img src="./files/p1.png" width="90%"></td>
             <td width="67%" valign="middle" align="justify">
