--- a/REGroup.html
+++ b/REGroup.html
@@ -112,7 +112,7 @@ $(document).ready(function () {
 <div id="container"> 
 <div class="container"> 
 
-<h2 class="header center black-text" style="text-align:center">REGroup: Rank-aggregating Ensemble of Generative Classifiers for Robust Predictions</h2> <br>
+<h2 class="header center black-text" style="text-align:center"><b>REGroup: Rank-aggregating Ensemble of Generative Classifiers for Robust Predictions</b></h2> <br>
 <h4 style="text-align:center"><a href="https://lokender.github.io/">Lokender Tiwari<sup>1,2</sup></a>&nbsp&nbsp&nbsp&nbsp<a href="https://scholar.google.com/citations?user=eZ4WZmIAAAAJ&hl=en">Anish Madan<sup>1</sup></a>&nbsp&nbsp&nbsp&nbsp<a href="https://www.iiitd.edu.in/~anands/index.html">Saket Anand<sup>1</sup></a>&nbsp&nbsp&nbsp&nbsp<a href="http://www.cse.iitd.ac.in/~suban/">Subhashish Banerjee<sup>3,4</sup></a>  </h4> 
 <h4 style="text-align:center"><a href="https://www.iiitd.ac.in/"><sup>1</sup>IIIT-Delhi</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="https://www.tcs.com/tcs-research"><sup>2</sup>TCS Research, India</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="https://home.iitd.ac.in/"><sup>3</sup>IIT-Delhi</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="https://www.ashoka.edu.in/computerscience"><sup>4</sup>Department of Computer Science, Ashoka University</a></h4>
 
