--- a/self-improving-SLAM.html
+++ b/self-improving-SLAM.html
@@ -112,7 +112,7 @@ $(document).ready(function () {
 <div id="container"> 
 <div class="container"> 
 
-<h2 style="text-align:center">Pseudo RGB-D for Self-Improving Monocular SLAM and Depth Prediction</h2> <br>
+<b><h2 style="text-align:center">Pseudo RGB-D for Self-Improving Monocular SLAM and Depth Prediction</h2></b> <br>
 <h4 style="text-align:center"><a href="https://lokender.github.io/">Lokender Tiwari<sup>1</sup></a>&nbsp&nbsp&nbsp&nbsp<a href="https://sites.google.com/site/peterji1990">Pan Ji<sup>2</sup></a>&nbsp&nbsp&nbsp&nbsp<a href="https://cs.adelaide.edu.au/~huy/home.php">Quoc-Huy Tran<sup>2</sup></a>&nbsp&nbsp&nbsp&nbsp<a href="https://bbzh.github.io/">Bingbing Zhuang<sup>2</sup></a>&nbsp&nbsp&nbsp&nbsp<a href="https://www.iiitd.edu.in/~anands/index.html">Saket Anand<sup>1</sup></a>&nbsp&nbsp&nbsp&nbsp<a href="https://cseweb.ucsd.edu/~mkchandraker/">Manmohan Chandraker<sup>2,3</sup></a>  </h4> 
 <h4 style="text-align:center"><a href="https://www.iiitd.ac.in/"><sup>1</sup>IIIT-Delhi</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="http://www.nec-labs.com/research-departments/media-analytics/media-analytics-home"><sup>2</sup>NEC Labs America </a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="https://ucsd.edu/"><sup>3</sup>UCSD</a>  </h4>
 
