--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ $(document).ready(function () {
                     <strong>Lokender Tiwari</strong>, Anish Madan, Saket Anand, Subhasis Banerjee <br>
                     <a href="https://wacv2022.thecvf.com/home">IEEE/CVF Winter Conference on Applications of Computer Vision (<b>WACV</b>), 2022
                     </a><br>  
-                    [<a href="https://lokender.github.io/REGroup.html">Project Page</a> | 
+                    [<a href="https://lokender.github.io/REGroup.html">Project</a> | 
                     <a href="https://github.com/lokender/REGroup" target="_blank">Code</a> ]
                     </li>
 
@@ -317,14 +317,13 @@ $(document).ready(function () {
                     <strong>Lokender Tiwari</strong>, Pan Ji, Quoc-Huy Tran, Bingbing Zhuang, Saket Anand, Manmohan Chandraker <br>
                     <a href="https://eccv2020.eu/">European Conference on Computer Vision
                     </a><br> 
-                [<a href="https://lokender.github.io/self-improving-SLAM.html">Project Page</a> |
+                [<a href="https://lokender.github.io/self-improving-SLAM.html">Project</a> |
                  <a href="https://arxiv.org/pdf/2004.10681.pdf">PDF</a> |
                 <a href="http://tiny.cc/pRGBDKITTI19" target="_blank">Demo 1 </a> | 
                 <a href="http://tiny.cc/pRGBDKITTI11" target="_blank">Demo 2 </a> |
                 <a href="http://tiny.cc/pRGBDTUMLCV" target="_blank">Demo 3</a>]
                     </li>
 
-<br>
                  <!-- Gallery Item 1 -->
                     <li  class="span3 gallery-item" data-id="id-1" data-type="illustration">
                         <br><br><br>
@@ -342,7 +341,7 @@ $(document).ready(function () {
                                         </a><br><br>
                 [<a href="https://www.iiitd.edu.in/~anands/files/papers/TiwariAnand_WACV2018_DGSAC.pdf">PDF</a> | 
                 <a href="https://github.com/lokender/dgsac" target="_blank">Code </a>]
-                <br><br>
+                <br><br><br>
                     </li>
 
 
