--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ $(document).ready(function () {
                             </span>
                         </span>
 
-                        <a href="gallery-single.htm"><img src="./paper_imgs/REGroup.png" width="300px"  alt="Gallery"></a>
+                        <img src="./paper_imgs/REGroup.png" width="300px"  alt="Gallery">
                     <i><b>REGroup: Rank-aggregating Ensemble of Generative Classifiers for Robust Predictions</b></i><br><br>
                     [ <b>WACV, 2022</b> ] <br>
                     <strong>Lokender Tiwari</strong>, Anish Madan, Saket Anand, Subhasis Banerjee <br>
