--- a/index.html
+++ b/index.html
@@ -280,6 +280,7 @@ $(document).ready(function () {
                     <a href="https://wacv2022.thecvf.com/home">IEEE/CVF Winter Conference on Applications of Computer Vision (<b>WACV</b>), 2022
                     </a><br>  
                     [<a href="https://lokender.github.io/REGroup.html">Project</a> | 
+                      <a href="https://arxiv.org/pdf/2006.10679.pdf">PDF Author Version</a> |
                     <a href="https://github.com/lokender/REGroup" target="_blank">Code</a> ]
                     </li>
 
