--- a/REGroup.html
+++ b/REGroup.html
@@ -149,7 +149,7 @@ Deep Neural Networks (DNNs) are often criticized for being susceptible to advers
 <a href="" target="_blank">
 <img class="responsive-img" src="./paper_imgs/regroup_paper_fig.png" width="100" >
 </a>
-<h4><a href="https://arxiv.org/pdf/2006.10679.pdf"><sup>1</sup>PDF Author Version</a></h4>
+<h4><a href="https://arxiv.org/pdf/2006.10679.pdf">PDF Author Version</a></h4>
   
 </div>
 <!-- <div style="text-align:justify"> 
