--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Dr. Lokender Tiwari</title>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width">
 <meta name="keywords" content="Lokender Tiwari, Dr. Lokender Tiwari, Computer Vision, Machine Learning, Artificial Intelligence, Deep Learning, Computer Graphics, Pseudo RGBD, NEC , IIIT Delhi, IIIT, TCS, TCS Research, Research, Cloth Animation, Metaverse">
 <style>
 body {
@@ -30,6 +30,12 @@ body {
   gtag('config', 'UA-132756458-1');
 </script>
 
+  <style>
+img {
+    max-width: 100%;
+}
+</style>
+  
 <link rel="stylesheet" href="./paper_imgs/mycss.css">
 </head>
 <body>
