--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
 <title>Dr. Lokender Tiwari</title>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="keywords" content="Lokender Tiwari, Dr. Lokender Tiwari, Computer Vision, Machine Learning, Artificial Intelligence, Deep Learning, Computer Graphics, Pseudo RGBD, NEC , IIIT Delhi, IIIT, TCS, TCS Research, Research, Cloth Animation, Metaverse">
 <style>
 body {
   font-family: Arial, Helvetica, sans-serif;
   margin: auto;
   width: 700px;
+  padding: 20px;
 
 }
 
