--- a/index.html
+++ b/index.html
@@ -79,10 +79,12 @@ Checkout my research group's publications at <a href="https://viscomputing.githu
 
 
 
-
 <h2 id="news">News</h2>
 <ul>
 
+  <li>[2022] One paper accepted to <a href="https://wacv2023.thecvf.com/home"> IEEE WACV, 2023</a> </li>
+  <li>[2022] Serving Programm Committee Member for the <a href="https://aaai.org/Conferences/AAAI-23/"> AAAI, 2023</a> </li>
+  <li>[2022] Serving Technical Programm Committee Member for the <a href="https://www.comsnets.org/cvad_workshop.html"> Connected Vehicles and Autonomous Driving </a> at <a href="https://www.comsnets.org/"> COMSNETS, 2023</a> </li>
   <li>[2022] One paper accepted to <a href="https://wacv2022.thecvf.com/home"> IEEE WACV, 2022</a> </li>
   <li>[2021] 3D Virtual Garment Try-on (DeepDraper) accepted in the <a href="http://iccv2021.thecvf.com/"> ICCV, 2021 </a> <a href="http://montrealrobotics.ca/diff3d/"> Workshop</a> </li>
   <li>[2021] Keynote talk on <i>Robust Scene Understanding</i> at the <a href="https://www.bitdurg.ac.in/bitcon2021/keynotes.html">BITCON, 2021</a></li>
@@ -116,6 +118,33 @@ Checkout my research group's publications at <a href="https://viscomputing.githu
 
 <!-- Publication Entry -->
 <table>
+
+<tr>
+<td>
+ <img src="./paper_imgs/garsim_wacv_main.gif" width="200px"  alt="Gallery">
+&nbsp &nbsp &nbsp
+</td>
+<td>
+<div class="publication-title">
+  <b>GarSim</b>: Particle Based Neural Garment Simulator
+</div>
+<div class="publication-authors">
+  <u>Lokender Tiwari</u> and Brojeshwar Bhowmick
+</div>
+<div class="publication-conf">
+  IEEE/CVF Winter Conference on Applications of Computer Vision <br> 
+<b>WACV, 2023</b>
+</div>
+<div class="publication-links">
+  PDF and Project Page Coming Soon
+<!--   <a href="https://lokender.github.io/REGroup.html">Project</a> | 
+                      <a href="https://arxiv.org/pdf/2006.10679.pdf">PDF Author Version</a> |
+                    <a href="https://github.com/lokender/REGroup" target="_blank">Code</a> -->
+</div>
+</td>
+</tr>
+
+
 <tr>
 <td>
  <img src="./paper_imgs/REGroup.png" width="200px"  alt="Gallery">
@@ -139,6 +168,9 @@ Checkout my research group's publications at <a href="https://viscomputing.githu
 </div>
 </td>
 </tr>
+
+
+
 
 <tr>
 <td>
@@ -287,6 +319,8 @@ IEEE International Conference on Image Processing
    <div class="active item">
 
              <ul>
+            <li>AAAI - 2023</li>
+            <li>COMSNETS - 2023</li>
             <li>Computer Vision and Image Understanding (CVIU)</li>
             <li>IEEE Transactions on Circuits and Systems for Video Technology (TCSVT)</li>
             <li>IEEE Transactions on Industrial Electronics</li>
