--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@ Checkout my research group's publications at <a href="https://viscomputing.githu
 
 <h2 id="news">News</h2>
 <ul>
-
+  <li>[2022] One US Patent #11,468,585 granted. </a> </li>
+  <li>[2022] Gave a talk on "Metavers: Current and The Future, a visual computing perspective" at <a href="https://sushantuniversity.edu.in/school-of-engineering-and-technology"> Sushant Universtiy</a> .</a> </li>
   <li>[2022] One paper accepted to <a href="https://wacv2023.thecvf.com/home"> IEEE WACV, 2023</a> </li>
   <li>[2022] Serving Programm Committee Member for the <a href="https://aaai.org/Conferences/AAAI-23/"> AAAI, 2023</a> </li>
   <li>[2022] Serving Technical Programm Committee Member for the <a href="https://www.comsnets.org/cvad_workshop.html"> Connected Vehicles and Autonomous Driving </a> at <a href="https://www.comsnets.org/"> COMSNETS, 2023</a> </li>
@@ -307,8 +308,24 @@ IEEE International Conference on Image Processing
       </div>
       <div class="publication-conf">
         <em><a href="http://www.nec-labs.com" target="_blank">NEC Laboratories America, Inc.</a></em> <br>
-              Application #US/16/987,705 <br> 
+              Patent No: 11,468,585<br> 
               <a href="https://patentpaper_imgs.storage.googleapis.com/f2/da/25/88189a42af73c3/US20210065391A1.pdf" id="prgbd_pat"> PDF </a>
+      </div>
+    </div>
+</div>
+
+<div class="row patent-entry">    
+    <div class="col-xs-12">
+      <div class="publication-title">
+      Method and System for Draping a 3D Garment on a 3D Human Body
+      </div>
+      <div class="publication-authors">
+      <u>Lokender Tiwari</u>, and Brojeshwar Bhowmick
+      </div>
+      <div class="publication-conf">
+        <em><a href="https://www.tcs.com/tcs-research" target="_blank">Tata Consultancy Services.</a></em> <br>
+              Application number: 21217893.3<br> 
+              <a href="https://patentimages.storage.googleapis.com/d4/d3/70/c1e1e4210d59c3/EP4064209A1.pdf" id="deepdraper_epo_pat"> PDF </a>
       </div>
     </div>
 </div>
