--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ body {
 <h1>Dr. Lokender Tiwari, PhD</h1>
 <h3>Research Scientist at TCS Research</h3>
 <p align=center>
-            <a href="mailto:tiwarilokender@gmail.com" ><img src="./paper_imgs/gmail.png" width="45px"></a> &nbsp &nbsp 
+            <a href="mailto:lokender.work@gmail.com" ><img src="./paper_imgs/gmail.png" width="45px"></a> &nbsp &nbsp 
                 <a href="mailto:lokender.tiwari@tcs.com" ><img src="./paper_imgs/email.png" width="45px"></a>  &nbsp&nbsp
                 <a href="https://scholar.google.com/citations?user=uHfnun4AAAAJ&hl=en" ><img src="./paper_imgs/scholar2.png" width="70px"></a> &nbsp&nbsp
                 <a href="http://www.linkedin.com/in/lokender/" ><img src="./paper_imgs/linkedin.png" width="35px"></a> &nbsp&nbsp
