--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ Checkout my research group's publications at <a href="https://viscomputing.githu
 <h2 id="news">News</h2>
 <ul>
   <li>[2022] One US Patent #11,468,585 granted. </a> </li>
-  <li>[2022] Gave a talk on "Metavers: Current and The Future, a visual computing perspective" at <a href="https://sushantuniversity.edu.in/school-of-engineering-and-technology"> Sushant Universtiy</a> .</a> </li>
+  <li>[2022] Gave a talk on "Metaverse: Current and The Future, a visual computing perspective" at <a href="https://sushantuniversity.edu.in/school-of-engineering-and-technology"> Sushant Universtiy</a> .</a> </li>
   <li>[2022] One paper accepted to <a href="https://wacv2023.thecvf.com/home"> IEEE WACV, 2023</a> </li>
   <li>[2022] Serving Programm Committee Member for the <a href="https://aaai.org/Conferences/AAAI-23/"> AAAI, 2023</a> </li>
   <li>[2022] Serving Technical Programm Committee Member for the <a href="https://www.comsnets.org/cvad_workshop.html"> Connected Vehicles and Autonomous Driving </a> at <a href="https://www.comsnets.org/"> COMSNETS, 2023</a> </li>
@@ -138,7 +138,7 @@ Checkout my research group's publications at <a href="https://viscomputing.githu
 </div>
 <div class="publication-links">
   PDF and Project Page Coming Soon
-<!- -   <a href="https://lokender.github.io/REGroup.html">Project</a> | 
+<!--   <a href="https://lokender.github.io/REGroup.html">Project</a> | 
                       <a href="https://arxiv.org/pdf/2006.10679.pdf">PDF Author Version</a> |
                     <a href="https://github.com/lokender/REGroup" target="_blank">Code</a> -->
 </div>
